adding counter update based on latest time

--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -43,7 +43,8 @@
 	<script src="scripts/TableCreator/createTable.js"></script>
 	<script>
 		var client = elasticsearch.Client({
-			host: 'localhost:9200'
+			host: 'localhost:9200',
+			//log: 'trace'
 		});
 		
 	</script>
