updating logstash config to push into log-* and log-constant

--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -13,8 +13,7 @@
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	
 
-	<script src="bower_components/leaflet-playback/dist/LeafletPlayback.js"></script>
-	
+	<script src="bower_components/leaflet-playback/dist/LeafletPlayback.js"></script> 
 
 	<script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
 	<link href="bower_components/leaflet-draw/dist/leaflet.draw.css" rel="stylesheet" type="text/css" />
@@ -114,6 +113,11 @@
 			</tr>
 			<tr><td></td><td></td><td></td></tr>
 		</table>
+	</div>
+
+
+	<div id="heat">
+		<iframe src="http://localhost:5601/app/kibana#/visualize/edit/ais-tilemap?embed=true&_g=(refreshInterval%3A(display%3AOff%2Cpause%3A!f%2Cvalue%3A0)%2Ctime%3A(from%3Anow%2FM%2Cinterval%3A'1d'%2Cmode%3Aquick%2Ctimezone%3AAfrica%2FLagos%2Cto%3Anow%2FM))" height="600" width="800"></iframe>
 	</div>
 
 </body>
