updating css styling for searchtable

--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -69,7 +69,7 @@
 		</table>
 		<!-- List of all Vessels in Area -->
 		<div class="searchtable">
-			<table id="vesselsearch" border="1">
+			<table id="vesselsearch">
 			</table>
 		</div>
 	</div>
