--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -25,6 +25,7 @@
 	<script src="bower_components/elasticsearch/elasticsearch.js"></script>
 
 	<link rel="stylesheet" href="styles/main.css" />
+	<link rel="stylesheet" href="styles/leaflet-weather.css" />
 </head>
 
 <body>
@@ -32,8 +33,9 @@
 	<div id="container">
 
 		<div class="row">
-			<div class="col-xs-6 col-sm-9 col-md-9">
+			<div class="col-xs-6 col-sm-9 col-md-9" >
 				<div id="map"> </div>
+				<div id="legend"></div>
 				
 				<div id="basemaps-wrapper">
 					<table id="layer">
