--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -6,14 +6,22 @@
 	<link href="bower_components/vis/dist/vis.min.css" rel="stylesheet" type="text/css" />
 	<script src="bower_components/vis/dist/vis.min.js"></script>
 
+
+
 	<script src="bower_components/leaflet/dist/leaflet.js"></script>
 	<link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
 
 
 	<script src="bower_components/jquery/dist/jquery.js"></script>
-
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<link href="bower_components/form.validation/dist/css/formValidation.css" rel="stylesheet" type="text/css" />
+	<script src="bower_components/form.validation/dist/js/formValidation.js"></script>
+	<script src="bower_components/form.validation/dist/js/framework/bootstrap.min.js"></script>
+	
+
+
+
 
 
 	<script src="bower_components/leaflet-playback/dist/LeafletPlayback.js"></script>
@@ -138,6 +146,81 @@
 				</div>
 			</div>
 		</div>
+
+
+		<div class="modal fade" id="myModal" role="dialog">
+			<div class="modal-dialog">
+
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Create a new Location</h4>
+					</div>
+
+					<div class="modal-body">
+						<form id="locationform">
+							<div class="form-group row">
+								<label for="locname" class="col-xs-4 col-form-label">Location Name</label>
+								<div class="col-xs-8">
+									<input class="form-control" type="search" value="" id="locname" name="lname">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="locid" class="col-xs-4 col-form-label">Location ID</label>
+								<div class="col-xs-8">
+									<input class="form-control" type="search" value="" id="locid" name="lid">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="locexp" class="col-xs-4 col-form-label">Location Exposure</label>
+								<div class="col-xs-8">
+									<input class="form-control" type="search" value="" id="locexp" name="lexp">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="locrisc" class="col-xs-4 col-form-label">Location Risk Score</label>
+								<div class="col-xs-8">
+									<input class="form-control" type="search" value="" id="locrisc" name="lrisc">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="loclat" class="col-xs-3 col-form-label">Latitude</label>
+								<div class="col-xs-3">
+									<input type="text" class="form-control" id="loclat">
+								</div>
+
+								<label for="loclon" class="col-xs-3 col-form-label">Longitude</label>
+								<div class="col-xs-3">
+									<input type="email" class="form-control" id="loclon">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="locrisc" class="col-xs-4 col-form-label">Draw Location on Map</label>
+								<div class="col-xs-8">
+									<button type="button" class="btn btn-default" id="drawloc">draw</button>
+								</div>
+							</div>
+
+							<form>
+
+								<button type="button" class="btn btn-primary" id="saveloc">Save</button>
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+
+		<script>
+
+</script>
+
+
+
 	</div>
 
 	<!--Map script -->
@@ -157,6 +240,7 @@
 	<script src="data/es-data.js"></script>
 	<!--Executable scripts -->
 	<script src="scripts/show-location.js"></script>
+	<script src="scripts/addLocation.js"></script>
 	<script src="scripts/elasticsearchofwarehouse.js"></script>
 	<script src="scripts/elasticsearchofvessel.js"></script>
 
