--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -169,7 +169,7 @@
 							<div class="form-group row">
 								<label for="locid" class="col-xs-4 col-form-label">Location ID</label>
 								<div class="col-xs-8">
-									<input class="form-control" type="search" value="" id="locid" name="lid">
+									<input class="form-control" type="search" value="LocID" id="locid" name="lid" >
 								</div>
 							</div>
 							<div class="form-group row">
@@ -185,29 +185,20 @@
 								</div>
 							</div>
 							<div class="form-group row">
-								<label for="loclat" class="col-xs-3 col-form-label">Latitude</label>
-								<div class="col-xs-3">
-									<input type="text" class="form-control" id="loclat">
+								<label for="loclat" class="col-xs-2 col-form-label">Latitude</label>
+								<div class="col-xs-4">
+									<input type="search" class="form-control" id="loclat" name="llat">
 								</div>
 
-								<label for="loclon" class="col-xs-3 col-form-label">Longitude</label>
-								<div class="col-xs-3">
-									<input type="email" class="form-control" id="loclon">
-								</div>
-							</div>
-							<div class="form-group row">
-								<label for="locrisc" class="col-xs-4 col-form-label">Draw Location on Map</label>
-								<div class="col-xs-8">
-									<button type="button" class="btn btn-default" id="drawloc">draw</button>
+								<label for="loclon" class="col-xs-2 col-form-label">Longitude</label>
+								<div class="col-xs-4">
+									<input type="search" class="form-control" id="loclon" name="llon">
 								</div>
 							</div>
-
-							<form>
-
 								<button type="button" class="btn btn-primary" id="saveloc">Save</button>
 								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 
-
+					<form>
 					</div>
 
 				</div>
