--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -195,6 +195,13 @@
 									<input type="search" class="form-control" id="loclon" name="llon">
 								</div>
 							</div>
+							<div class="form-group row">
+								<div class="col-xs-1">
+									<input type="hidden" class="form-control" id="lochidden" name="lhidden">
+								</div>
+
+							</div>
+							
 								<button type="button" class="btn btn-primary" id="saveloc">Save</button>
 								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 
