edit location only allows name, exp and risk

--- a/riskmap/index.html
+++ b/riskmap/index.html
@@ -163,7 +163,7 @@
 							<div class="form-group row">
 								<label for="locid" class="col-xs-4 col-form-label">Location ID</label>
 								<div class="col-xs-8">
-									<input class="form-control" type="search" value="LocID" id="locid" name="lid" >
+									<input class="form-control" type="search" id="locid" name="lid" >
 								</div>
 							</div>
 							<div class="form-group row">
@@ -213,9 +213,7 @@
 
 		</div>
 
-		<script>
 
-</script>
 
 
 
